// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alerts End-to-End Tests when creating a new alert will return a 400 response if the request body is invalid 1`] = `
{
  "issues": [
    {
      "code": "invalid_type",
      "expected": "string",
      "message": "Expected string, received number",
      "path": [
        "icon",
      ],
      "received": "number",
    },
    {
      "code": "too_small",
      "exact": false,
      "inclusive": true,
      "message": "String must contain at least 1 character(s)",
      "minimum": 1,
      "path": [
        "title",
      ],
      "type": "string",
    },
    {
      "code": "invalid_type",
      "expected": "string",
      "message": "Expected string, received boolean",
      "path": [
        "message",
      ],
      "received": "boolean",
    },
    {
      "code": "invalid_type",
      "expected": "number",
      "message": "Expected number, received string",
      "path": [
        "active",
      ],
      "received": "string",
    },
    {
      "code": "invalid_type",
      "expected": "number",
      "message": "Expected number, received string",
      "path": [
        "expires",
      ],
      "received": "string",
    },
  ],
}
`;

exports[`Alerts End-to-End Tests when creating a new alert will return a 400 response if the request body is missing required properties 1`] = `
{
  "issues": [
    {
      "code": "invalid_type",
      "expected": "string",
      "message": "Required",
      "path": [
        "icon",
      ],
      "received": "undefined",
    },
    {
      "code": "invalid_type",
      "expected": "string",
      "message": "Required",
      "path": [
        "title",
      ],
      "received": "undefined",
    },
    {
      "code": "invalid_type",
      "expected": "string",
      "message": "Required",
      "path": [
        "message",
      ],
      "received": "undefined",
    },
  ],
}
`;

exports[`Alerts End-to-End Tests when listing alerts will return a 400 response if the query string contains invalid params 1`] = `
{
  "issues": [
    {
      "code": "too_small",
      "exact": false,
      "inclusive": true,
      "message": "Number must be greater than or equal to 0",
      "minimum": 0,
      "path": [
        "skip",
      ],
      "type": "number",
    },
    {
      "code": "invalid_type",
      "expected": "number",
      "message": "Expected number, received nan",
      "path": [
        "limit",
      ],
      "received": "nan",
    },
  ],
}
`;

exports[`Alerts End-to-End Tests when listing alerts will return a list of alerts with default params 1`] = `
[
  {
    "active": 1711129987600,
    "expires": 1714827309699,
    "icon": "female",
    "id": "ac7f6181-aa8a-4440-884b-d7eb28d3ef92",
    "message": "Quia officiis dolore illum laudantium ea animi distinctio. Sit explicabo quis quis odio esse. Iste ratione quod omnis libero. Accusantium tempora aspernatur corporis assumenda deleniti eveniet delectus earum.
Blanditiis delectus minima maiores adipisci beatae ab. Nostrum nulla ipsa cum distinctio voluptatem blanditiis distinctio sunt earum. Distinctio ratione vero veniam. Beatae eum natus. Magni maiores veniam culpa ipsam dolorum.",
    "title": "Aperiam quia ipsum illo.",
  },
  {
    "active": 1711051129588,
    "icon": "gamebird",
    "id": "0ccc27a7-1597-4934-84ad-873c42997ec9",
    "message": "Tempora rem adipisci corrupti repellat facilis expedita a reprehenderit ut. Odio reprehenderit laboriosam est voluptatum cupiditate eos ipsum officia iusto. Ea deserunt natus possimus. Consectetur quis impedit quas eos.
Porro aut ducimus perspiciatis unde quibusdam fugiat nemo tenetur aliquid. Inventore facere ducimus est reiciendis. Voluptatem omnis saepe fugit nobis unde eligendi eum.",
    "title": "Laboriosam dolorem ipsam unde explicabo alias molestiae.",
  },
  {
    "active": 1709559201151,
    "expires": 1713063367964,
    "icon": "Technician",
    "id": "6691762f-b4c7-43cf-a424-b857acc0f59a",
    "message": "Tempore doloremque dignissimos ut distinctio sit ex molestiae. Tenetur tenetur totam a distinctio placeat voluptatem ipsam. Modi libero sapiente dicta.
Eligendi sit eius quis vel saepe exercitationem incidunt. Pariatur error ipsam tenetur vero facilis alias ex. Non tempora fuga dolorum voluptatum hic. Neque perspiciatis fuga voluptatem quisquam consequatur minus. Amet sit asperiores minus occaecati itaque cum.",
    "title": "A illum reiciendis rerum ratione maxime dolorem dignissimos.",
  },
  {
    "active": 1709454759818,
    "expires": 1715619194985,
    "icon": "Rap",
    "id": "38d5da43-9837-4bf2-8142-60f4a518e969",
    "message": "Voluptatibus eveniet sit tempora consequatur. Deleniti voluptatum laborum harum. Impedit repudiandae repellat doloremque excepturi dolorum unde ratione vero libero. Dolore alias ab exercitationem a voluptates quam distinctio.
Dicta nulla minima temporibus cumque nam molestiae quos. Laudantium nobis perspiciatis ipsam repellendus velit tempore adipisci quisquam aut. Optio distinctio iste tempora corporis aliquid facilis illo ipsam voluptatibus.",
    "title": "Architecto iste culpa praesentium doloribus dicta totam consectetur placeat minima.",
  },
  {
    "active": 1708686392015,
    "expires": 1715208590725,
    "icon": "Northeast",
    "id": "58721d09-c80c-4d57-a3f5-85c69d0acda2",
    "message": "Hic sed vero suscipit vitae. Hic nam nobis nemo explicabo. Quisquam quaerat ex suscipit est ducimus ex odit laboriosam aperiam. Ut ipsa quibusdam laborum nisi rem exercitationem iste.
Cumque esse sit iure ipsum. Praesentium explicabo aspernatur modi odit est officiis deleniti nemo. Veniam porro excepturi alias repellat natus pariatur. Ratione magnam aperiam temporibus assumenda necessitatibus impedit hic explicabo.",
    "title": "Repellendus velit est voluptates corporis officia quaerat cupiditate.",
  },
  {
    "active": 1708648735904,
    "expires": 1711648671516,
    "icon": "Product",
    "id": "c4d1a4dc-f273-4c19-9b11-9ceaf1c01e3d",
    "message": "Numquam sint autem. Maxime aliquid doloremque modi quidem. Minima quae voluptatibus sint fugit minima quas saepe praesentium.
Culpa illum nesciunt reprehenderit voluptatem nemo nihil vitae. Rem quos repellat laborum suscipit. Dolorum perferendis dignissimos pariatur illo illum assumenda harum. Quae ipsam amet quidem voluptatibus. Laboriosam quibusdam repudiandae ut odio soluta in corrupti possimus quibusdam.",
    "title": "Iusto iusto eos accusantium ea repellendus laborum dignissimos saepe maiores.",
  },
  {
    "active": 1708573479159,
    "expires": 1716214037597,
    "icon": "Hyundai",
    "id": "7d1c768b-f1df-4032-b822-7f01fe68ef80",
    "message": "Eius nobis consequuntur occaecati quod. Tempora velit sapiente pariatur rem iusto ipsam. Magni eos maxime earum placeat. Iure temporibus dolorum dolores minima. Consequatur nostrum quod occaecati veritatis iure. Saepe accusantium corrupti dolorum odit cum.
Quis eum quae aliquid velit repellat nam blanditiis. Expedita pariatur aperiam impedit fugit quod distinctio voluptas. Beatae fugiat fugiat. Laboriosam omnis labore modi modi. Commodi eos corrupti id est ipsum animi laudantium quidem. Quos odio deserunt dolor aut voluptatum.",
    "title": "Voluptatem eius officiis iure dolorem quam ratione eos recusandae in.",
  },
  {
    "active": 1708527238427,
    "expires": 1713387033926,
    "icon": "Reggae",
    "id": "ea9e3a54-ef36-4d2e-aa92-a4c932ca45d8",
    "message": "Numquam quo odit ex aspernatur aliquam totam suscipit perspiciatis iste. Iure sequi libero quis eaque rerum eaque. Facere laboriosam accusantium in fugit. Soluta dolore voluptatibus. Ipsum aliquam perferendis rem reiciendis tenetur.
Praesentium saepe consectetur autem vero labore provident tempora provident. Non quaerat voluptatem repellendus. Illum error quo neque. Necessitatibus quae labore.",
    "title": "Quod dolore debitis laboriosam numquam similique.",
  },
  {
    "active": 1708067545064,
    "icon": "plum",
    "id": "6a579869-fe57-4b7c-89e5-13b839b28863",
    "message": "Quam modi quas minima deleniti minus veniam quos quasi hic. Inventore dolorem quibusdam dolore vel illo. Iure odio vero nulla. Ad neque sapiente. Itaque ipsa aspernatur assumenda tempore tenetur impedit. Deserunt quos quisquam exercitationem beatae quasi eum enim.
Incidunt consectetur voluptas. Beatae incidunt maiores ipsa eius ut modi dicta officiis. Voluptates quibusdam assumenda et voluptates culpa.",
    "title": "Cupiditate blanditiis vero dolores quisquam voluptas beatae nostrum possimus alias.",
  },
  {
    "active": 1707990504875,
    "expires": 1711637105532,
    "icon": "evenly",
    "id": "41d51fe5-7de6-4b5b-85e3-ec7e169e9dfc",
    "message": "Libero facilis officia ducimus vero dicta. Nulla illum corporis odio amet impedit ipsa. Aperiam est pariatur. Fugit eveniet magnam nostrum quam temporibus fugit. Autem dicta cupiditate non. Facere consequatur tenetur quam asperiores dolore nam magni.
Aliquam aspernatur ullam odit veritatis sapiente. Magnam dolor nihil consectetur ut modi natus neque. Doloremque facere quasi soluta tempore accusantium amet at. Excepturi nulla ipsa deserunt commodi.",
    "title": "Expedita eius fuga occaecati.",
  },
]
`;

exports[`Alerts End-to-End Tests when listing alerts will return a list of alerts with params provided in the query string 1`] = `
[
  {
    "active": 1708686392015,
    "expires": 1715208590725,
    "icon": "Northeast",
    "id": "58721d09-c80c-4d57-a3f5-85c69d0acda2",
    "message": "Hic sed vero suscipit vitae. Hic nam nobis nemo explicabo. Quisquam quaerat ex suscipit est ducimus ex odit laboriosam aperiam. Ut ipsa quibusdam laborum nisi rem exercitationem iste.
Cumque esse sit iure ipsum. Praesentium explicabo aspernatur modi odit est officiis deleniti nemo. Veniam porro excepturi alias repellat natus pariatur. Ratione magnam aperiam temporibus assumenda necessitatibus impedit hic explicabo.",
    "title": "Repellendus velit est voluptates corporis officia quaerat cupiditate.",
  },
  {
    "active": 1708648735904,
    "expires": 1711648671516,
    "icon": "Product",
    "id": "c4d1a4dc-f273-4c19-9b11-9ceaf1c01e3d",
    "message": "Numquam sint autem. Maxime aliquid doloremque modi quidem. Minima quae voluptatibus sint fugit minima quas saepe praesentium.
Culpa illum nesciunt reprehenderit voluptatem nemo nihil vitae. Rem quos repellat laborum suscipit. Dolorum perferendis dignissimos pariatur illo illum assumenda harum. Quae ipsam amet quidem voluptatibus. Laboriosam quibusdam repudiandae ut odio soluta in corrupti possimus quibusdam.",
    "title": "Iusto iusto eos accusantium ea repellendus laborum dignissimos saepe maiores.",
  },
  {
    "active": 1708573479159,
    "expires": 1716214037597,
    "icon": "Hyundai",
    "id": "7d1c768b-f1df-4032-b822-7f01fe68ef80",
    "message": "Eius nobis consequuntur occaecati quod. Tempora velit sapiente pariatur rem iusto ipsam. Magni eos maxime earum placeat. Iure temporibus dolorum dolores minima. Consequatur nostrum quod occaecati veritatis iure. Saepe accusantium corrupti dolorum odit cum.
Quis eum quae aliquid velit repellat nam blanditiis. Expedita pariatur aperiam impedit fugit quod distinctio voluptas. Beatae fugiat fugiat. Laboriosam omnis labore modi modi. Commodi eos corrupti id est ipsum animi laudantium quidem. Quos odio deserunt dolor aut voluptatum.",
    "title": "Voluptatem eius officiis iure dolorem quam ratione eos recusandae in.",
  },
  {
    "active": 1708527238427,
    "expires": 1713387033926,
    "icon": "Reggae",
    "id": "ea9e3a54-ef36-4d2e-aa92-a4c932ca45d8",
    "message": "Numquam quo odit ex aspernatur aliquam totam suscipit perspiciatis iste. Iure sequi libero quis eaque rerum eaque. Facere laboriosam accusantium in fugit. Soluta dolore voluptatibus. Ipsum aliquam perferendis rem reiciendis tenetur.
Praesentium saepe consectetur autem vero labore provident tempora provident. Non quaerat voluptatem repellendus. Illum error quo neque. Necessitatibus quae labore.",
    "title": "Quod dolore debitis laboriosam numquam similique.",
  },
  {
    "active": 1708067545064,
    "icon": "plum",
    "id": "6a579869-fe57-4b7c-89e5-13b839b28863",
    "message": "Quam modi quas minima deleniti minus veniam quos quasi hic. Inventore dolorem quibusdam dolore vel illo. Iure odio vero nulla. Ad neque sapiente. Itaque ipsa aspernatur assumenda tempore tenetur impedit. Deserunt quos quisquam exercitationem beatae quasi eum enim.
Incidunt consectetur voluptas. Beatae incidunt maiores ipsa eius ut modi dicta officiis. Voluptates quibusdam assumenda et voluptates culpa.",
    "title": "Cupiditate blanditiis vero dolores quisquam voluptas beatae nostrum possimus alias.",
  },
  {
    "active": 1707990504875,
    "expires": 1711637105532,
    "icon": "evenly",
    "id": "41d51fe5-7de6-4b5b-85e3-ec7e169e9dfc",
    "message": "Libero facilis officia ducimus vero dicta. Nulla illum corporis odio amet impedit ipsa. Aperiam est pariatur. Fugit eveniet magnam nostrum quam temporibus fugit. Autem dicta cupiditate non. Facere consequatur tenetur quam asperiores dolore nam magni.
Aliquam aspernatur ullam odit veritatis sapiente. Magnam dolor nihil consectetur ut modi natus neque. Doloremque facere quasi soluta tempore accusantium amet at. Excepturi nulla ipsa deserunt commodi.",
    "title": "Expedita eius fuga occaecati.",
  },
  {
    "active": 1707927881212,
    "expires": 1715921092601,
    "icon": "Jupiter",
    "id": "8176fc01-d18d-4b0a-8941-84fc82798aef",
    "message": "Accusamus temporibus sed omnis quo. Delectus facilis sit molestias aliquam hic. Debitis quisquam quis doloribus voluptatem nisi ex repellat. Aspernatur omnis fugit amet id est officia. Optio vel at quos ipsum vero praesentium officia est. Veritatis porro consequuntur consectetur autem libero praesentium.
Quod voluptates voluptas. Quod sit consectetur voluptates sint. Modi ipsum quisquam. Sint ut sed ducimus nisi dolorum non. Reprehenderit esse doloribus ad nam adipisci suscipit. Corporis quas fugit corrupti.",
    "title": "Ratione occaecati esse veritatis.",
  },
  {
    "active": 1707707712360,
    "icon": "Southwest",
    "id": "dd863307-7327-4be2-86c0-6184949f1f37",
    "message": "Omnis libero incidunt sequi rerum consequatur maxime ea voluptatibus. Rerum sit praesentium minus tenetur architecto quasi dolorum. Porro facilis iure sapiente sint. Necessitatibus perspiciatis debitis voluptates ea. Corrupti laboriosam quia mollitia quo libero harum vitae exercitationem.
Modi expedita corporis sed. Minima beatae recusandae beatae. Iure veniam ipsa voluptas. Maxime ipsam quaerat repudiandae maxime. Quasi eaque suscipit. Provident praesentium sed.",
    "title": "Velit molestias dolores magnam.",
  },
]
`;

exports[`Alerts End-to-End Tests when updating an existing alert will return a 400 response if the request body is invalid 1`] = `
{
  "issues": [
    {
      "code": "invalid_type",
      "expected": "string",
      "message": "Expected string, received number",
      "path": [
        "icon",
      ],
      "received": "number",
    },
    {
      "code": "too_small",
      "exact": false,
      "inclusive": true,
      "message": "String must contain at least 1 character(s)",
      "minimum": 1,
      "path": [
        "title",
      ],
      "type": "string",
    },
    {
      "code": "invalid_type",
      "expected": "string",
      "message": "Expected string, received boolean",
      "path": [
        "message",
      ],
      "received": "boolean",
    },
    {
      "code": "invalid_type",
      "expected": "number",
      "message": "Expected number, received string",
      "path": [
        "active",
      ],
      "received": "string",
    },
    {
      "code": "invalid_type",
      "expected": "number",
      "message": "Expected number, received string",
      "path": [
        "expires",
      ],
      "received": "string",
    },
  ],
}
`;

exports[`Alerts End-to-End Tests when updating an existing alert will return a 400 response if the request body is missing required properties 1`] = `
{
  "issues": [
    {
      "code": "invalid_type",
      "expected": "string",
      "message": "Required",
      "path": [
        "icon",
      ],
      "received": "undefined",
    },
    {
      "code": "invalid_type",
      "expected": "string",
      "message": "Required",
      "path": [
        "title",
      ],
      "received": "undefined",
    },
    {
      "code": "invalid_type",
      "expected": "string",
      "message": "Required",
      "path": [
        "message",
      ],
      "received": "undefined",
    },
  ],
}
`;
